# vst-rust-vue-gui

./: .gitignore  Cargo.toml  build.sh
src/: bundle.js  lib.rs  style.css
view/: package-lock.json  package.json  webpack.config.js
view/dest/: bundle.js
view/public/: index.html
view/src/: index.js
view/src/components/: App.vue
